// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Luma Close-Up Film Centre retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 12600000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://lu.ma/pud18oc8",
        "format": {},
        "notes": "Hosted by ABRC",
        "status": {
          "soldOut": true,
        },
        "time": 1791630900000,
      },
    ],
    "showingId": "luma.com-evt-kTENvcnnpQQtMZO",
    "title": "ABRC FILM CLUB & DISCUSSION: PARASITE",
    "url": "https://lu.ma/pud18oc8",
  },
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://lu.ma/sz76azo0",
        "format": {},
        "notes": "Hosted by Parho Co",
        "status": {
          "soldOut": false,
        },
        "time": 1792846800000,
      },
    ],
    "showingId": "luma.com-evt-GhjjQP1QTL2dGnq",
    "title": "MOVIE & BOOK CLUB: The Namesake by Jhumpa Lahiri",
    "url": "https://lu.ma/sz76azo0",
  },
]
`;

exports[`Luma Electric Cinema White City retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 7200000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://lu.ma/fd1mniqa",
        "format": {},
        "notes": "Hosted by Seventh",
        "status": {
          "soldOut": true,
        },
        "time": 1790791200000,
      },
    ],
    "showingId": "luma.com-evt-KazJWspt6mbLI1y",
    "title": "Built to Last: An Unfiltered Conversation by Seventh hosted at Soho House",
    "url": "https://lu.ma/fd1mniqa",
  },
]
`;

exports[`Luma The Exchange NW1 retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 14400000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://lu.ma/4e3m5ptq",
        "format": {},
        "notes": "Hosted by Korean Film Club",
        "status": {
          "soldOut": false,
        },
        "time": 1790701200000,
      },
    ],
    "showingId": "luma.com-evt-g013unoub5mSyir",
    "title": "Korean Film Club: September Edition",
    "url": "https://lu.ma/4e3m5ptq",
  },
]
`;

exports[`Luma The Roof Gardens retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
      "duration": 9000000,
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://lu.ma/q6jrrfi7",
        "format": {},
        "notes": "Hosted by GOHUB",
        "status": {
          "soldOut": false,
        },
        "time": 1791117000000,
      },
    ],
    "showingId": "luma.com-evt-5VeMy2SF93ZRlpo",
    "title": "Movie & Social",
    "url": "https://lu.ma/q6jrrfi7",
  },
]
`;

exports[`Luma Vue West End retrieve and find events 1`] = `[]`;
